[project]
name = "rms-pollutant-simulation"
version = "0.1.0"
description = "Simulacija širenja zagađivača u riječnom slivu — Tema 12"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "seaborn>=0.12",
    "simpy>=4.1.1",
]

[dependency-groups]
dev = ["ruff>=0.4.0", "pre-commit>=3.7"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/*.py" = ["N802", "N803", "N806", "N815"]
"main.py" = ["E402"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
